--- a/funções.ipynb
+++ b/funções.ipynb
@@ -1,6 +1,77 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sem argumentos\n",
+    "def funOla():\n",
+    "    print(\"Olá!\")\n",
+    "\n",
+    "funOla()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá! João\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sem argumentos\n",
+    "def funOlaNome(nome):\n",
+    "    print(f'{\"Olá! \"}{nome}')\n",
+    "\n",
+    "funOlaNome(\"João\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#com retorno\n",
+    "def funSoma(a,b):\n",
+    "    return(a+b)\n",
+    "\n",
+    "soma = funSoma(2,4)\n",
+    "print(soma)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "primeiro agumento normal: 10\n",
+      "Primeiro agumento normal: 10\n",
       "20\n",
       "30\n",
       "40\n"
